# DiscreteMaths

./: CMakeLists.txt  DiscreteMathsAlgorithm.cpp  DiscreteMathsAlgorithm.h  DiscreteMathsEdge.cpp  DiscreteMathsEdge.h  DiscreteMathsGraph.cpp  DiscreteMathsGraph.h  DiscreteMathsVertex.cpp  DiscreteMathsVertex.h  README.md
